--- a/RestService/.env
+++ b/RestService/.env
@@ -1,2 +1,3 @@
 API_KEY = "71f6d6491ccd8a70c189ecc6dc85548b"
 PORT = "3000"
+MONGODB_URI = "mongodb+srv://yashdb:Revyking@cluster0.tzklmsc.mongodb.net/?retryWrites=true&w=majority"
