--- a/RestService/package.json
+++ b/RestService/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ."
-
+    "lint": "eslint .",
+    "dev": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8.38.0",
-    "eslint-config-airbnb": "^19.0.4"
+    "eslint-config-airbnb": "^19.0.4",
+    "nodemon": "^2.0.22"
   }
 }
