--- a/RestService/vercel.json
+++ b/RestService/vercel.json
@@ -1,13 +1,3 @@
- {  
-    "version":2,
-    "builds": [
-        {
-        "src": "*.js", "use": "@now/node"
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "main.js"
-        }
-    ]
- } 
+{
+    "rewrites": [{ "source": "/(.*)", "destination": "main.js" }]
+}
